--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
+    "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
+    "sequelize": "^6.37.5",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
