--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.1"
 services:
   db:
     image: mysql
-    restart: always
+    restart: no
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: lag
@@ -18,7 +18,7 @@ services:
 
   phpmyadmin:
     image: phpmyadmin
-    restart: always
+    restart: no
     ports:
       - "8080:80"
     environment:
